--- a/marksman.csproj
+++ b/marksman.csproj
@@ -47,8 +47,10 @@
   <ItemGroup>
     <Compile Include="Broker.cs" />
     <Compile Include="Marksman.cs" />
+    <Compile Include="Types\PCSystemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sentry.cs" />
+    <Compile Include="Types\WindowsSystemTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
