--- a/marksman.csproj
+++ b/marksman.csproj
@@ -96,7 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broker.cs" />
-    <Compile Include="Marksman.cs" />
+    <Compile Include="MarksmanService.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="ReportToSnipeJob.cs" />
     <Compile Include="Types\PCSystemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sentry.cs" />
