Introduced the initial asset component descriptors

--- a/Marksman.Service/Marksman.Service.csproj
+++ b/Marksman.Service/Marksman.Service.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Descriptors\ComponentDescriptor.cs" />
     <Compile Include="Descriptors\AssetDescriptor.cs" />
     <Compile Include="Deprecated\Broker.cs" />
     <Compile Include="MarksmanService.cs" />
